--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,145 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Montserrat', sans-serif;
 }
+
+.app {
+  background-image: url('./assets/sunny-bg.jpg');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4s ease-out;
+
+}
+
+.app.cloudy {
+  background-image: url("./assets/cloudy-bg.jpg");
+}
+.app.night {
+  background-image: url("./assets/night-bg.jpg");
+}
+.app.sunny {
+  background-image: url("./assets/sunny-bg.jpg");
+}
+
+main {
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.25));
+  
+}
+
+.search-box {
+  width: 100%;
+  display: flex;
+ 
+}
+
+.search-box .search-bar {
+  display:block;
+  width: 100%;
+  padding: 15px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 10px 10px 10px 10px;
+  
+  margin-top: 16px;
+  margin-left: 20%;
+  margin-right: 20%;
+
+  box-shadow: 1vw 0px 5px rgba(0,0,0,0.2);
+
+
+  color: #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+
+}
+
+.search-box .search-bar:focus {
+  background-color: rgba(225,225,225,0.75);
+}
+
+.location-box .location {
+  color: #FFF;
+  font-size: 5vw;
+  font-weight: 900;
+  text-align: center;
+}
+
+.location-box .date {
+  color: #FFF;
+  font-size: 2.5vw;
+  font-weight: 300;
+  font-style:normal;
+  text-align: center;
+  
+ 
+}
+
+.info-box .temp {
+  color:#FFF;
+  font-size: 120px;
+  font-size: 9.5vw;
+  font-weight: 900;  
+}
+
+.info-box .weather {
+  color:#FFF;
+  font-size: 48px;
+  font-size: 3.5vw;
+  font-weight: 700;
+}
+.info-box .feels_like {
+  color:#FFF;
+  font-size: 28px;
+  font-size: 3.5vw;
+  font-weight: 700;
+}
+.info-box .description {
+  color:#FFF;
+  font-size: 28px;
+  font-size: 3.5vw;
+  font-weight: 700;
+}
+
+.container-fluid {
+  background-color: rgb(77, 73, 73);
+  height: 100px;
+
+}
+
+.info-box{
+  position: relative;
+  margin: 30px auto;
+  background-color: rgba(225, 225, 225, 0.308);
+  border-radius: 126px;
+
+  padding: 15px 25px;
+  margin-left: 10%;
+  margin-right: 10%;
+
+  text-align: center;
+  box-shadow: 3px 6px rgba(0,0,0,0.2);
+}
+
+.weather-icon {
+  width: 20%;
+  height: 20%;
+  vertical-align: middle;
+
+}
+
+.temp-box {
+  margin-right: 5%;
+}
+
